Changed, .conf files according to the image

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -6,13 +6,8 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  /home/andres/yocto/poky/meta \
-  /home/andres/yocto/poky/meta-poky \ 
-  /home/andres/yocto/meta-syrus \  
-  /home/andres/yocto/meta-openembedded/meta-oe \
-  /home/andres/yocto/meta-openembedded/meta-networking \
-  /home/andres/yocto/meta-openembedded/meta-python \
-  /home/andres/yocto/meta-openembedded/meta-multimedia \    
-  /home/andres/yocto/meta-ti \    
-  /home/andres/yocto/meta-mender/meta-mender-core \  
+  /home/${USER}/yocto/poky/meta \
+  /home/${USER}/yocto/poky/meta-poky \ 
+  /home/${USER}/yocto/meta-bbsii \  
+  /home/${USER}/yocto/meta-ti \      
   "
