--- a/conf/local.conf
+++ b/conf/local.conf
@@ -237,63 +237,11 @@ BB_DISKMON_DIRS ??= "\
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
 
-#It has to be used for gstreamer ugly plugins 
-LICENSE_FLAGS_WHITELIST = "commercial"
-
 # Removes source after build
-#INHERIT += "rm_work"
+INHERIT += "rm_work"
 
 # Upstart service manager
 DISTRO_FEATURES_append = " systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
-
-#Module Loading at Boot Time
-#KERNEL_MODULE_AUTOLOAD += "module1 module2 module3"
-KERNEL_MODULE_AUTOLOAD += "g_cdc"
-
-#Mender 
-
-INHERIT += "mender-full rm_work"
-RM_WORK_EXCLUDE = "wic-tools"
-
-# The name of the disk image and Artifact that will be built.
-# This is what the device will report that it is running, and different updates must have different names
-# because Mender will skip installation of an Artifact if it is already installed.
-MENDER_ARTIFACT_NAME = "syrusrouter-1"
-
-#It is the responsible for the special processing of the image required to create the A/B image format
-#INHERIT += "mender-full rm_work"
-
-IMAGE_FSTYPES = "ext4 sdimg"
-
-#Disable the service that starts Mender at boot. For standalone mode
-SYSTEMD_AUTO_ENABLE = "disable"
-
-#This avoids Mender's current dependency on systemd
-MENDER_FEATURES_DISABLE_append = " mender-systemd"
-
-MENDER_FEATURES_ENABLE_append = " mender-uboot mender-image-sd"
-MENDER_FEATURES_DISABLE_append = " mender-grub mender-image-uefi"
-
-#MENDER_FEATURES_ENABLE_append = " mender-uboot"
-
-#When using emmc
-MENDER_STORAGE_DEVICE = "/dev/mmcblk1"
-
-#When using sdcard
-#MENDER_STORAGE_DEVICE = "/dev/mmcblk0"
-
-#MENDER_STORAGE_TOTAL_SIZE_MB = "3600"
-#MENDER_BOOT_PART_SIZE_MB = "16"
-#MENDER_DATA_PART_SIZE_MB = "2600"
-#IMAGE_ROOTFS_SIZE = "1048576"
-#MENDER_PARTITION_ALIGNMENT_KB = "4096"
-
-#MENDER_DATA_PART_SIZE_MB = "2048"
-#MENDER_UBOOT_ENV_STORAGE_DEVICE_OFFSET_1 = "0x400000"
-#MENDER_UBOOT_ENV_STORAGE_DEVICE_OFFSET_2 = "0x600000"
-
-#For production add the MENDER_SERVER_URL and MENDER_TENANT_TOKEN
-#MENDER_SERVER_URL = 'https://192.168.0.125'    
